title clipping fix

--- a/css/main.css
+++ b/css/main.css
@@ -6398,7 +6398,7 @@ code {
 .appMount-3lHmkl,
 body,
 html {
-	height:100%;
+	height:calc(100% - 30px);
 	width:100%
 }
 
